# nvMolKit

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  README.md  greptile.json  old_JENkinsfile  pyproject.toml  results.csv  setup.py
LICENSE/: License.txt  third-party.txt
admin/: Dockerfile.dev  UBSAN_suppresions.supp  apply_copyright.sh  environment.yml.dev  install_qa_dependencies.sh  run_ci.sh  run_clang_format.sh  run_clang_tidy.sh  (+6 more)
benchmarks/: CMakeLists.txt  benchmark_timing.py  benchmark_utils.cpp  benchmark_utils.h  bit_vector.cpp  butina_clustering_bench.py  butina_clustering_plot.py  butina_clustering_profile.py  conformer_rmsd_bench.py  cross_similarity_bench.cu  cross_similarity_bench.py  eigen_solver_bench.cu  etkdg_bench.py  etkdg_embed_bench.cpp  etkdg_ff_bench.cpp  ff_optimize_bench.py  fused_butina_clustering_bench.py  mmff_multimol_bench.cpp  mmff_optimize_bench.cpp  morgan_fp.cpp  similarity_bench.cpp  similarity_bench.py  substruct_bench.cu  substruct_bench.py  substruct_bench_analysis.py  substruct_config.csv  substruct_data_collection_rdkit.py  tfd_bench.py  tfd_prepare_mols.py  tfd_profile.py  updateInverseHessianBench.cu
benchmarks/bench_utils/: __init__.py  loaders.py  molprep.py  timing.py
benchmarks/data/: MPCONF196.sdf  benchmark_smiles.csv
src/conformer/: CMakeLists.txt  conformer_info.h  device_coord_collector.cpp  device_coord_collector.h  device_coord_result.h  etkdg_device_collect.cu  etkdg_device_collect.h  ff_device_collect.cpp  ff_device_collect.h
src/forcefields/: CMakeLists.txt  batched_forcefield.cpp  batched_forcefield.h  coord_gen.cu  coord_gen.h  dg_batched_forcefield.cu  dg_batched_forcefield.h  dist_geom.cu  dist_geom.h  dist_geom_kernels.cu  dist_geom_kernels.h  dist_geom_kernels_device.cuh  etk_batched_forcefield.cu  etk_batched_forcefield.h  ff_utils.cpp  ff_utils.h  forcefield_constraints.cpp  forcefield_constraints.h  kernel_utils.cu  kernel_utils.cuh  mmff.cu  mmff.h  mmff_batched_forcefield.cu  mmff_batched_forcefield.h  mmff_constraints.cpp  mmff_constraints.h  mmff_kernels.cu  mmff_kernels.h  mmff_kernels_device.cuh  mmff_kernels_device_copy.cuh  mmff_properties.h  uff.cu  uff.h  uff_batched_forcefield.cu  uff_batched_forcefield.h  uff_kernels.cu  uff_kernels.h  uff_kernels_device.cuh
src/minimizer/: CMakeLists.txt  bfgs_common.cpp  bfgs_common.h  bfgs_distgeom.cpp  bfgs_distgeom.h  bfgs_hessian.cu  bfgs_hessian.h  bfgs_minimize.cu  bfgs_minimize.h  bfgs_minimize_permol_kernels.cu  bfgs_minimize_permol_kernels.h  bfgs_mmff.cpp  bfgs_mmff.h  bfgs_types.h  bfgs_uff.cpp  bfgs_uff.h  ff_device_collect.cpp  ff_device_collect.h  fire_minimizer.cu  fire_minimizer.h  minimizer_api.h
src/substruct/: CMakeLists.txt  atom_data_packed.h  batch_results.cpp  boolean_tree.cuh  gpu_executor.cu  gpu_executor.h  graph_labeler.cuh  minibatch_planner.cpp  minibatch_planner.h  molecules.cpp  molecules.h  molecules_device.cuh  packed_bonds.cpp  packed_bonds.h  packed_bonds_device.cuh  pinned_buffer_pool.cpp  pinned_buffer_pool.h  recursive_preprocessor.cu  recursive_preprocessor.h  sm_shared_mem_config.cuh  substruct_algos.cuh  substruct_constants.h  substruct_debug.h  substruct_kernels.cu  substruct_kernels.h  substruct_launch_config.cpp  substruct_launch_config.h  substruct_results.h  substruct_search.cu  substruct_search.h  substruct_search_internal.cpp  substruct_search_internal.cuh  substruct_search_internal.h  substruct_template_config.h  substruct_types.h  thread_worker_context.h
src/testutils/: CMakeLists.txt  chembl_1k_smis.txt  conformer_checkers.cpp  conformer_checkers.h  mol_data.cpp  mol_data.h  substruct_validation.cu  substruct_validation.h
src/utils/: CMakeLists.txt  cub_helpers.cuh  cuda_error_check.h  device.cpp  device.h  device_timings.cuh  device_vector.h  exceptions.cpp  exceptions.h  host_vector.h  macros_ptx.cuh  nvtx.h  openmp_helpers.cpp  openmp_helpers.h  p2p.cpp  p2p.h  pinned_host_allocator.cpp  pinned_host_allocator.h  rdkit_compat.h  rdkit_ownership_wrap.h  thread_safe_queue.h  work_splitting.h
tests/: CMakeLists.txt  filter_all_smarts.sh  smarts_filter.cpp  test_bfgs_hessian.cpp  test_bfgs_minimizer.cu  test_boolean_tree.cu  test_butina.cpp  test_butina_prune.cu  test_conformer_checkers.cpp  test_coord_collect.cpp  test_coordgen.cu  test_cuda_error_check.cpp  test_device.cpp  test_device_timings.cu  test_device_vector.cpp  test_distgeom.cu  test_distgeom_kernels.cu  test_etkdg.cu  test_etkdg_coordgen.cu  test_etkdg_device_output.cu  test_etkdg_etk_minimize.cu  test_etkdg_minimize.cu  test_etkdg_result_tracker.cpp  test_etkdg_stereochem_checks.cu  test_ff_device_output.cu  test_fire_minimizer.cu  test_flat_bit_vect.cpp  test_flat_bit_vect_device.cu  test_flattened_builder.cu  test_graph_labeler.cu  test_graph_labeler_recursive.cu  test_host_vector.cu  test_minibatch_planner.cpp  test_mmff.cu  test_molecules.cu  test_morgan_fingerprint.cpp  test_morgan_fingerprint_ref.cpp  test_openmp_helpers.cpp  test_p2p.cpp  test_pinned_host_allocator.cpp  (+19 more)
tests/integration/: CMakeLists.txt  test_fp_sim_workflow.cpp
tests/test_data/: 50_atom_mol.sdf  60plus_atom_mols.sdf  chembl_1k.smi
tests/test_data/SMARTS/: BMS_2006_filter.txt  BMS_2006_filter_invalid.txt  BMS_2006_filter_supported.txt  BMS_2006_filter_unsupported.txt  RLewis_smarts_supported.txt  openbabel_functional_groups.txt  openbabel_functional_groups_invalid.txt  openbabel_functional_groups_supported.txt  openbabel_functional_groups_unsupported.txt  pwalters_alert_collection.txt  pwalters_alert_collection_supported.txt  pwalters_alert_collection_unsupported.txt  rdkit_fragment_descriptors.txt  rdkit_fragment_descriptors_supported.txt  rdkit_pattern_fingerprint.txt  rdkit_pattern_fingerprint_supported.txt  rdkit_tautomer_transforms.txt  rdkit_tautomer_transforms_supported.txt  rdkit_torsionPreferences_macrocycles.txt  rdkit_torsionPreferences_smallrings.txt  rdkit_torsionPreferences_smallrings_supported.txt  rdkit_torsionPreferences_v2.txt  rdkit_torsionPreferences_v2_supported.txt  wehi_pains.txt
(+222 files in other folders)
