[build-system]
requires = [
    "scikit-build>=0.18",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nvMolKit"
version = "0.5.0"
description = "Python bindings for the nvMolKit project"
requires-python = ">=3.10,<3.15"


dependencies = [
    "numpy>=1.23",
    "torch>=2.1",
    "triton",
    "rdkit",
    "nvidia-cuda-runtime-cu12>=12.0",
]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
test = [
    "pandas",
    "psutil",
    "pytest",
    "ruff",
]
docs = [
    "sphinx",
    "nvidia-sphinx-theme",
    "autodocsumm",
    "myst-parser",
    "jupyter-sphinx",
]
autotune = [
    "optuna",
]

# cibuildwheel orchestration for the pip wheel pipeline. The CI workflow sets
# RDKIT_VERSION to a value present in admin/distribute/rdkit_build_matrix.yaml.
# before-build clones rdkit-pypi at the matching tag, reproduces its build to
# obtain headers + boost, and stages those plus pip-installed rdkit's libs at
# stable paths read via NVMOLKIT_BUILD_AGAINST_PIP_* env vars by setup.py.
[tool.cibuildwheel]
build-verbosity = 3
build = [
    "cp311-manylinux_x86_64",
    "cp312-manylinux_x86_64",
    "cp313-manylinux_x86_64",
    "cp314-manylinux_x86_64",
]
# Use the "build" frontend instead of "pip": it surfaces setup.py / scikit-build
# stdout/stderr cleanly. The default "pip" frontend captures backend output and
# only re-emits it on success, which makes diagnosing scikit-build failures
# painful.
build-frontend = "build"
environment-pass = ["RDKIT_VERSION"]
# container-engine (network mode + cache bind-mounts) is set at runtime by
# admin/deploy/build_pip_wheels.sh so it can interpolate $HOME for the cache
# paths. cibuildwheel's TOML config does not support env-var substitution in
# create-args.

[tool.cibuildwheel.linux]
archs = ["x86_64"]
# RDKit native deps and python build deps (conan, ninja, etc.) are baked into
# the manylinux+CUDA image at admin/container/manylinux_2_28_cuda12.Dockerfile,
# so no before-all is needed here.
before-build = "bash {project}/admin/distribute/cibuildwheel_before_build.sh {project}"
environment = { NVMOLKIT_BUILD_AGAINST_PIP_RDKIT = "ON", NVMOLKIT_BUILD_AGAINST_PIP_LIBDIR = "/tmp/nvmolkit_pip_inputs/rdkit_libs", NVMOLKIT_BUILD_AGAINST_PIP_INCDIR = "/tmp/nvmolkit_pip_inputs/rdkit_include", NVMOLKIT_BUILD_AGAINST_PIP_BOOSTINCLUDEDIR = "/tmp/nvmolkit_pip_inputs/boost_include" }
# Wheel repair is delegated to admin/distribute/repair_wheel.sh: it runs
# auditwheel with the right --exclude list and then patchelf-rewrites RPATH
# on each nvmolkit/_*.so so the dynamic linker finds the rdkit + boost libs
# in <site-packages>/rdkit.libs/ and libcudart in
# <site-packages>/nvidia/cuda_runtime/lib/ at import time.
repair-wheel-command = "bash {project}/admin/distribute/repair_wheel.sh {dest_dir} {wheel}"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

addopts = "-rfEX --strict-markers"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test"]
python_functions = ["test"]
xfail_strict = true
markers = [
    "long: marks tests as long-running tests",
]


[tool.ruff]
line-length = 119
include = ["nvmolkit/**/*.py", "benchmarks/**/*.py", "setup.py"]

[tool.ruff.lint]
ignore = [
    "C901",    # Checks for functions with a high McCabe complexity. 
    "D100",    # Checks for undocumented public module definitions.
    "E501",    # Checks for lines that exceed the specified maximum character length.
    "E741",    # Checks for the use of the characters 'l', 'O', or 'I' as variable names.
    "RUF005",  # Checks for uses of the + operator to concatenate collections.
]
select = [
    "C",   # Pylint conventions
    "D",   # Documentation formatting
    "E",   # style stuff, whitespaces
    "F",   # important pyflakes lints
    "I",   # import sorting
    "RUF", # Some Ruff-specific lints, unused noqas, etc.
    "W",   # Pylint warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"nvmolkit/tests/test_*.py" = ["D103"]
"benchmarks/*.py" = ["F841", "D103"]

[tool.ruff.lint.isort]
lines-after-imports = 1

[tool.ruff.lint.pydocstyle]
convention = "google"
